--- a/path_redirect_import.links.menu.yml
+++ b/path_redirect_import.links.menu.yml
@@ -2,4 +2,5 @@ path_redirect_import.import_form:
   route_name: path_redirect_import.import
   title: 'URL redirects import'
   description: 'Import redirects from file'
-  parent: system.admin_config_search
+  parent: redirect.list
+  menu_name: admin
