--- a/path_redirect_import.links.menu.yml
+++ b/path_redirect_import.links.menu.yml
@@ -1,5 +1,6 @@
-path_redirect_import.import_form:
-  route_name: path_redirect_import.import
-  title: 'URL redirects import'
-  description: 'Import redirects from file'
-  parent: system.admin_config_search
+redirect.import:
+  title: 'Import'
+  parent: redirect.list
+  route_name: redirect.import
+  description: 'Import redirects from file.'
+  menu_name: admin
